--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,6 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     flex-direction: column;
     padding: unset;
     min-height: 100dvh;
@@ -220,7 +219,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 4rem 2rem 0 2rem;
+    padding: 4rem 2rem 5rem 2rem;
   
   }
 
